--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carlos Acosta</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="nav-bar"></nav>
-    <header class="header">
-        <p>Hi, my name is</p>
-        <h2 class="header-name">Carlos Acosta</h2>
+    <nav class="nav-bar">
+
+    </nav>
+    <section id="intro">
+        <p class="name">Hi, my name is <span>Carlos Acosta.</span></p>
+        <h2>I am a developer.</h2>
         <p>I am currently a Computer Science student at Texas A&M University specializing in 
-            Python and C++ with a strong interest in both Cloud and FullStack develoopment. Currently,
+            Python and C++ with a strong interest in both Cloud and FullStack development. Currently,
             I am learning both AWS and Node.
         </p>
-    </header>
+    </section>
+
+    <!---Contact Me Section-->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <ul>
+            <li>
+                <a target="_blank" href="https://github.com/carlosra0345">
+                    <i class = "fa fa-github">
+                        ::before
+                    </i>
+                </a>
+            </li>
+            <li>
+                <a target="_blank" href="https://www.linkedin.com/in/carlos-acosta02/">
+                    <i class="fa fa-linkedin">
+                        ::before
+                    </i>
+                </a>
+            </li>
+            <li>
+                <a target="_blank" href="https://twitter.com/CarlosraAcosta">
+                    <i class="fa fa-twitter">
+                        ::before
+                    </i>
+                </a>
+            </li>
+            <li>
+                <a target="_blank" href="https://www.instagram.com/carlosacosta2112/">
+                    <i class="fa fa-instagram">
+                        ::before
+                    </i>
+                </a>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
