--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,13 @@
 </head>
 <body>
     <!--Nav Section-->
-    <nav class="nav-bar">
+    <nav>
         <ul>
             <li>
                 <h1>
-                    <a href="index.html">Carlos Acosta</a>
+                    <a href="index.html" class="logo">
+                        <i class="bi bi-code-slash"> CA</i>
+                    </a>
                 </h1>
             </li>
             <li>
