--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
                 <a href="#contact-me">Contact Me</a>
             </li>
             <li>
-                <a target="_blank" href="https://drive.google.com/file/d/15xwscvoens8GF2lfh9Vg-RX8jALxsU_0/view?usp=sharing">
+                <a class="resume-button" target="_blank" href="https://drive.google.com/file/d/15xwscvoens8GF2lfh9Vg-RX8jALxsU_0/view?usp=sharing">
                     Resume
                 </a>
             </li>
@@ -39,7 +39,7 @@
     </nav>
     <section id="intro">
         <p class="name">Hi, my name is <span>Carlos Acosta.</span></p>
-        <h2>I am a developer.</h2>
+        <h2>I'm a developer.</h2>
         <p>I am currently a Computer Science student at Texas A&M University specializing in 
             Python and C++ with a strong interest in both Cloud and FullStack development. Currently,
             I am learning both AWS and Node.
@@ -49,40 +49,38 @@
     <!---Contact Me Section-->
     <section id="contact">
         <div class="socials">
-            <h2>Contact Me</h2>
-            <ul>
+            <h2 class="contact-text">Contact Me</h2>
+            <ul class="contact-list">
                 <li>
                     <a target="_blank" href="https://github.com/carlosra0345">
-                        <i class="bi bi-github">
-                            ::before
-                        </i>
+                        <span class="bi bi-github" aria-hidden="true"></span>
+                        <span class="sr-only">GitHub</span>
                     </a>
                 </li>
                 <li>
                     <a target="_blank" href="https://www.linkedin.com/in/carlos-acosta02/">
-                        <i class="bi bi-linkedin">
-                            ::before
-                        </i>
+                        <span class="bi bi-linkedin" aria-hiddne="true"></span>
+                        <span class="sr-only">LinkedIn</span>
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://twitter.com/CarlosraAcosta">
-                        <i class="bi bi-twitter">
-                            ::before
-                        </i>
+                    <a target="_blank" href="">
+                        <span class="bi bi-envelope"></span>
+                        <span class="sr-only">Email</span>
                     </a>
                 </li>
                 <li>
                     <a target="_blank" href="https://www.instagram.com/carlosacosta2112/">
-                        <i class="bi bi-instagram">
-                            ::before
-                        </i>
+                        <span class="bi bi-instagram" aria-hidden="true"></span>
+                        <span class="sr-only">Instagram</span>
                     </a>
                 </li>
             </ul>
         </div>
     </section>
     
+
+
     <!--Popper.js, Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
