updated styling of hero

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
             </li>
         </ul>
     </nav>
+    <!--Hero landing section-->
     <section id="intro">
         <p class="name">Hi, my name is <span>Carlos Acosta.</span></p>
         <h2>I'm a developer.</h2>
