starting about me section

--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,16 @@
                 </h1>
             </li>
             <li>
-                <a href="#about-me">About Me</a>
+                <a href="#about-me">// About Me</a>
             </li>
             <li>
-                <a href="#projects">Projects</a>
+                <a href="#experience">// Experience</a>
             </li>
             <li>
-                <a href="#contact-me">Contact Me</a>
+                <a href="#projects">// Projects</a>
+            </li>
+            <li>
+                <a href="#contact-me">// Contact Me</a>
             </li>
             <li>
                 <a class="resume-button" target="_blank" href="https://drive.google.com/file/d/15xwscvoens8GF2lfh9Vg-RX8jALxsU_0/view?usp=sharing">
@@ -37,15 +40,54 @@
             </li>
         </ul>
     </nav>
+    
     <!--Hero landing section-->
     <section id="intro">
-        <p class="name">Hi, my name is <span>Carlos Acosta.</span></p>
+        <p class="name">Hi, my name is<span>Carlos Acosta.</span></p>
         <h2>I'm a developer.</h2>
-        <p>I am currently a Computer Science student at Texas A&M University specializing in 
-            Python and C++ with a strong interest in both Cloud and FullStack development. Currently,
-            I am learning both AWS and Node.
-        </p>
+        <span class="arrow-icon bi bi-chevron-double-down"></span>
     </section>
+
+    <!--About Me Section-->
+    <section id="about">
+        <figure class="portrait">
+            <img src="assets/portrait.png" alt="Self portrait headshot">
+            <section class="about-info">
+                <div class="about-text">
+                    <h3>About Me</h3>
+                    <p>I am currently a Computer Science student at Texas A&M University who is fascinated by learning and using technology
+                        to solve complex problems.
+                    </p>
+                </div>
+                <div class="about-skills">
+                    <h3>Skills</h3>
+                    <ul class="skill-list">
+                        <li>
+                            <img src="assets/python-logo.svg" alt="python-icon" class="skill-icon python-logo">
+                            <span>Python</span>
+                        </li>
+                        <li>
+                            <img src="assets/c++-logo.svg" alt="c++-icon" class="skill-icon c++-logo">
+                            <span>C++</span>
+                        </li>
+                        <li>
+                            <img src="assets/JavaScript-logo.png" alt="javascript-icon" class="skill-icon js-logo">
+                            <span>JavaScript</span>
+                        </li>
+                        <li>
+                            <img src="assets/html-logo.svg" alt="html-icon" class="skill-icon html-logo">
+                            <span>HTML</span>
+                        </li>
+                        <li>
+                            <img src="assets/css-logo.svg" alt="css-icon" class="skill-icon css-logo">
+                            <span>CSS</span>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </figure>
+    </section>
+
 
     <!---Contact Me Section-->
     <section id="contact">
