progress on about section

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
             </li>
         </ul>
     </nav>
-    
+
     <!--Hero landing section-->
     <section id="intro">
         <p class="name">Hi, my name is<span>Carlos Acosta.</span></p>
@@ -48,44 +48,49 @@
         <span class="arrow-icon bi bi-chevron-double-down"></span>
     </section>
 
+
     <!--About Me Section-->
     <section id="about">
         <figure class="portrait">
-            <img src="assets/portrait.png" alt="Self portrait headshot">
-            <section class="about-info">
-                <div class="about-text">
-                    <h3>About Me</h3>
-                    <p>I am currently a Computer Science student at Texas A&M University who is fascinated by learning and using technology
-                        to solve complex problems.
-                    </p>
-                </div>
-                <div class="about-skills">
-                    <h3>Skills</h3>
-                    <ul class="skill-list">
-                        <li>
-                            <img src="assets/python-logo.svg" alt="python-icon" class="skill-icon python-logo">
-                            <span>Python</span>
-                        </li>
-                        <li>
-                            <img src="assets/c++-logo.svg" alt="c++-icon" class="skill-icon c++-logo">
-                            <span>C++</span>
-                        </li>
-                        <li>
-                            <img src="assets/JavaScript-logo.png" alt="javascript-icon" class="skill-icon js-logo">
-                            <span>JavaScript</span>
-                        </li>
-                        <li>
-                            <img src="assets/html-logo.svg" alt="html-icon" class="skill-icon html-logo">
-                            <span>HTML</span>
-                        </li>
-                        <li>
-                            <img src="assets/css-logo.svg" alt="css-icon" class="skill-icon css-logo">
-                            <span>CSS</span>
-                        </li>
-                    </ul>
-                </div>
-            </section>
+            <img src="assets/portrait.png" alt="Self portrait headshot" class="headshot">
         </figure>
+        <section class="about-info">
+            <div class="about-text">
+                <h3>About Me</h3>
+                <p>I am currently a Computer Science student at Texas A&M University who is fascinated with learning and using technology
+                    to solve complex problems.
+                </p>
+            </div>
+            <div class="about-skills">
+                <h3>Skills</h3>
+                <ul class="skill-list">
+                    <li>
+                        <img src="assets/python-logo.svg" alt="python-icon" class="skill-icon python-logo"> 
+                        <span>Python</span>
+                    </li>
+                    <li>
+                        <img src="assets/c++-logo.svg" alt="c++-icon" class="skill-icon c++-logo">
+                        <span>C++</span>
+                    </li>
+                    <li>
+                        <img src="assets/JavaScript-logo.png" alt="javascript-icon" class="skill-icon js-logo">
+                        <span>JavaScript</span>
+                    </li>
+                    <li>
+                        <img src="assets/html-logo.svg" alt="html-icon" class="skill-icon html-logo">
+                        <span>HTML</span>
+                    </li>
+                    <li>
+                        <img src="assets/css-logo.svg" alt="css-icon" class="skill-icon css-logo"> 
+                        <span>CSS</span>
+                    </li>
+                    <li>
+                        <img src="assets/aws-logo.svg" alt="aws-icon" class="skill-icon aws-logo">
+                        <span>AWS</span>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </section>
 
 
