worked on experience section

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
                 <a href="#projects">// Projects</a>
             </li>
             <li>
-                <a href="#contact-me">// Contact Me</a>
+                <a href="#contact">// Contact Me</a>
             </li>
             <li>
                 <a class="resume-button" target="_blank" href="https://drive.google.com/file/d/15xwscvoens8GF2lfh9Vg-RX8jALxsU_0/view?usp=sharing">
@@ -93,11 +93,125 @@
         </section>
     </section>
 
+    <!--Experience Section-->
+    <section id="experience">
+        <h2>Experience</h2>
+        <div class="experience-tiles">
+            <!--Paycom Tile-->
+            <div class="tile">
+                <img src="assets/paycom-logo.svg" alt="paycom logo" class="paycom-logo career-icon">
+                <div class="tile-content">
+                    <div class="tile-text">
+                        <h3>Pacyom</h3>
+                        <p>Summer Technology Engagement Program</p>
+                        <p>July 2023 - Present</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia distinctio, sequi adipisci sed facere 
+                            voluptatum nam eaque repellendus nisi voluptatem velit quos incidunt. Magnam cumque ipsam aliquid nihil sapiente doloribus.
+                        </p>
+                    </div>
+                    <div class="experience-skills">
+                        <ul class="paycom-skills career-skills">
+                            <li class="python-icon">
+                                <img src="assets/python-logo.svg" alt="python-icon" class="skill-icon"> 
+                                <span>Python</span>
+                            </li>
+                            <li class="javascript-icon">
+                                <img src="assets/JavaScript-logo.png" alt="javascript-icon" class="skill-icon">
+                                <span>JavaScript</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!--TAMU Tile-->
+            <div class="tile">
+                <img src="assets/math-logo.png" alt="TAMU logo" class="tamu-logo career-icon">
+                <div class="tile-content">
+                    <div class="tile-text">
+                        <h3>TAMU Department of Mathematics</h3>
+                        <p>Student Research Technician</p>
+                        <p>January 2023 - Present</p>
+                        <p>
+                            I am currently working alongisde my professor where I am responsible for performing unit tests, 
+                            debugging, and maintaining documentations for various MATLAB simulations programs.
+                        </p>
+                    </div>
+                    <div class="experience-skills">
+                        <ul class="tamu-skills career-skills">
+                            <li class="python-icon">
+                                <img src="assets/python-logo.svg" alt="python icon" class="skill-icon">
+                                <span>Python</span>
+                            </li>
+                            <li class="matlab-icon">
+                                <img src="assets/matlab-logo.png" alt="matlab icon" class="skill-icon">
+                                <span>MatLab</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!--Aggie Coding Club tile-->
+            <div class="tile">
+                <img src="assets/acc-logo.png" alt="acc-logo" class="acc-logo career-icon">
+                <div class="tile-content">
+                    <div class="tile-text">
+                        <h3>Aggie Coding Club</h3>
+                        <p>Events and Marketing Officer</p>
+                        <p>September 2023 - Present</p>
+                        <p>
+                            Recently elected as an Events and Marketing Officer where I am responsible for managing the club's social media 
+                            presence, planning events, and driving member engagement. Additionally, as a member, I have attended various workshops learning new 
+                            technologies and services.
+                        </p>
+                    </div>
+                    <div class="experience-skills">
+                        <ul class="acc-skills career-skills">
+                            <li class="js-icon">
+                                <img src="assets/JavaScript-logo.png" alt="javascript icon" class="skill-icon">
+                                <span>JavaScript</span>
+                            </li>
+                            <li class="python-icon">
+                                <img src="assets/python-logo.svg" alt="python icon" class="skill-icon">
+                                <span>Python</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Projects Section-->
+    <section id="#projects">
+        <h2>Projects</h2>
+        <div class="projects-grid">
+            <div class="seamcarve-tile">
+                <img src="" alt="seamcarving-cover">
+                <h3>Seam Carving</h3>
+            </div>
+            <div class="readability">
+                <img src="" alt="readability-cover">
+                <h3>Automated Readability Assessment</h3>
+            </div>
+            <div class="weather-cover">
+                <img src="" alt="weather-cover">
+                <h3>Weather Data Visualizer</h3>
+            </div>
+        </div>
+    </section>
 
     <!---Contact Me Section-->
     <section id="contact">
         <div class="socials">
             <h2 class="contact-text">Contact Me</h2>
+            <p>
+                Get in touch or email me directly at carlosra0345@gmail.com
+            </p>
+            <form class="contact-form">
+                <input class="name-input" type="text" placeholder="<Name>">
+                <input class="email-input" type="text" placeholder="<Email>">
+                <input class="message-input" type="text" placeholder="<Message">
+            </form>
             <ul class="contact-list">
                 <li>
                     <a target="_blank" href="https://github.com/carlosra0345">
