worked on contact

--- a/src/index.html
+++ b/src/index.html
@@ -208,9 +208,9 @@
                 Get in touch or email me directly at carlosra0345@gmail.com
             </p>
             <form class="contact-form">
-                <input class="name-input" type="text" placeholder="<Name>">
-                <input class="email-input" type="text" placeholder="<Email>">
-                <input class="message-input" type="text" placeholder="<Message">
+                <input class="name-input contact-input" type="text" placeholder="<Name>">
+                <input class="email-input contact-input" type="text" placeholder="<Email>">
+                <textarea class="message-input" placeholder="<Message>" maxlength="400"></textarea>
             </form>
             <ul class="contact-list">
                 <li>
@@ -221,7 +221,7 @@
                 </li>
                 <li>
                     <a target="_blank" href="https://www.linkedin.com/in/carlos-acosta02/">
-                        <span class="bi bi-linkedin" aria-hiddne="true"></span>
+                        <span class="bi bi-linkedin" aria-hidden="true"></span>
                         <span class="sr-only">LinkedIn</span>
                     </a>
                 </li>
