--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 </h1>
             </li>
             <li>
-                <a href="#about-me">// About Me</a>
+                <a href="#about">// About Me</a>
             </li>
             <li>
                 <a href="#experience">// Experience</a>
@@ -99,12 +99,14 @@
         <div class="experience-tiles">
             <!--Paycom Tile-->
             <div class="tile">
-                <img src="assets/paycom-logo.svg" alt="paycom logo" class="paycom-logo career-icon">
+                <img src="assets/paycom-logo.png" alt="paycom logo" class="paycom-logo career-icon">
                 <div class="tile-content">
                     <div class="tile-text">
-                        <h3>Pacyom</h3>
-                        <p>Summer Technology Engagement Program</p>
-                        <p>July 2023 - Present</p>
+                        <div class="tile-heading">
+                            <h3>Paycom</h3>
+                            <p>Summer Technology Engagement Program</p>
+                            <p>July 2023 - Present</p>
+                        </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia distinctio, sequi adipisci sed facere 
                             voluptatum nam eaque repellendus nisi voluptatem velit quos incidunt. Magnam cumque ipsam aliquid nihil sapiente doloribus.
                         </p>
@@ -128,9 +130,11 @@
                 <img src="assets/math-logo.png" alt="TAMU logo" class="tamu-logo career-icon">
                 <div class="tile-content">
                     <div class="tile-text">
-                        <h3>TAMU Department of Mathematics</h3>
-                        <p>Student Research Technician</p>
-                        <p>January 2023 - Present</p>
+                        <div class="tile-heading">
+                            <h3>TAMU Department of Mathematics</h3>
+                            <p>Student Research Technician</p>
+                            <p>January 2023 - Present</p>
+                        </div>
                         <p>
                             I am currently working alongisde my professor where I am responsible for performing unit tests, 
                             debugging, and maintaining documentations for various MATLAB simulations programs.
@@ -152,12 +156,14 @@
             </div>
             <!--Aggie Coding Club tile-->
             <div class="tile">
-                <img src="assets/acc-logo.png" alt="acc-logo" class="acc-logo career-icon">
+                <img src="assets/acc-logo.png" alt="acc logo" class="acc-logo career-icon">
                 <div class="tile-content">
                     <div class="tile-text">
-                        <h3>Aggie Coding Club</h3>
-                        <p>Events and Marketing Officer</p>
-                        <p>September 2023 - Present</p>
+                        <div class="tile-heading">
+                            <h3>Aggie Coding Club</h3>
+                            <p>Events and Marketing Officer</p>
+                            <p>September 2023 - Present</p>
+                        </div>
                         <p>
                             Recently elected as an Events and Marketing Officer where I am responsible for managing the club's social media 
                             presence, planning events, and driving member engagement. Additionally, as a member, I have attended various workshops learning new 
