--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
                     <div class="tile-text">
                         <div class="tile-heading">
                             <h3>Paycom</h3>
-                            <p>Summer Technology Engagement Program</p>
+                            <p>Summer Technology Engagement Program | </p>
                             <p>July 2023 - Present</p>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia distinctio, sequi adipisci sed facere 
@@ -132,7 +132,7 @@
                     <div class="tile-text">
                         <div class="tile-heading">
                             <h3>TAMU Department of Mathematics</h3>
-                            <p>Student Research Technician</p>
+                            <p>Student Research Technician | </p>
                             <p>January 2023 - Present</p>
                         </div>
                         <p>
@@ -161,7 +161,7 @@
                     <div class="tile-text">
                         <div class="tile-heading">
                             <h3>Aggie Coding Club</h3>
-                            <p>Events and Marketing Officer</p>
+                            <p>Events and Marketing Officer | </p>
                             <p>September 2023 - Present</p>
                         </div>
                         <p>
@@ -188,7 +188,7 @@
     </section>
 
     <!--Projects Section-->
-    <section id="#projects">
+ <!---   <section id="projects">
         <h2>Projects</h2>
         <div class="projects-grid">
             <div class="seamcarve-tile">
@@ -205,6 +205,7 @@
             </div>
         </div>
     </section>
+ --->
 
     <!---Contact Me Section-->
     <section id="contact">
@@ -217,7 +218,9 @@
                 <input class="name-input contact-input" type="text" placeholder="<Name>">
                 <input class="email-input contact-input" type="text" placeholder="<Email>">
                 <textarea class="message-input" placeholder="<Message>" maxlength="400"></textarea>
+                <button class="form-button">Submit</button>
             </form>
+            <!----
             <ul class="contact-list">
                 <li>
                     <a target="_blank" href="https://github.com/carlosra0345">
@@ -244,6 +247,7 @@
                     </a>
                 </li>
             </ul>
+            -->
         </div>
     </section>
     
