--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">    
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <!--Nav Section-->
@@ -188,7 +189,7 @@
     </section>
 
     <!--Projects Section-->
- <!---   <section id="projects">
+ <!---   <section id="projects" class=container>
         <h2>Projects</h2>
         <div class="projects-grid">
             <div class="seamcarve-tile">
