--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carlos Acosta</title>
-    <!--Google Fonts API, BootStrap, then external stylesheet-->
+    <!--Google Fonts API, , then external stylesheet-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap" rel="stylesheet">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+
     <!--Nav Section-->
     <nav>
         <ul>
@@ -49,54 +51,76 @@
         <span class="arrow-icon bi bi-chevron-double-down"></span>
     </section>
 
-
     <!--About Me Section-->
-    <section id="about">
-        <figure class="portrait">
-            <img src="assets/portrait.png" alt="Self portrait headshot" class="headshot">
-        </figure>
-        <section class="about-info">
-            <div class="about-text">
-                <h3>About Me</h3>
-                <p>I am currently a Computer Science student at Texas A&M University who is fascinated with learning and using technology
-                    to solve complex problems.
-                </p>
+    <section id="about" class="container overflow-hidden">
+        <div class="row align-items-center">
+            <div class="col-md-5 align-self-center">
+                <div class="row justify-content-center align-items-start">
+                    <img src="assets/portrait.png" alt="Self portrait headshot" class="img-fluid headshot">
+                </div>
             </div>
-            <div class="about-skills">
-                <h3>Skills</h3>
-                <ul class="skill-list">
-                    <li>
-                        <img src="assets/python-logo.svg" alt="python-icon" class="skill-icon python-logo"> 
-                        <span>Python</span>
-                    </li>
-                    <li>
-                        <img src="assets/c++-logo.svg" alt="c++-icon" class="skill-icon c++-logo">
-                        <span>C++</span>
-                    </li>
-                    <li>
-                        <img src="assets/JavaScript-logo.png" alt="javascript-icon" class="skill-icon js-logo">
-                        <span>JavaScript</span>
-                    </li>
-                    <li>
-                        <img src="assets/html-logo.svg" alt="html-icon" class="skill-icon html-logo">
-                        <span>HTML</span>
-                    </li>
-                    <li>
-                        <img src="assets/css-logo.svg" alt="css-icon" class="skill-icon css-logo"> 
-                        <span>CSS</span>
-                    </li>
-                    <li>
-                        <img src="assets/aws-logo.svg" alt="aws-icon" class="skill-icon aws-logo">
-                        <span>AWS</span>
-                    </li>
-                </ul>
+            <div class="col-md-7">
+                <div class="row my-5">
+                    <section class="about-text">
+                        <h3 class="subheading-3">About Me</h3>
+                        <p>I am currently a Computer Science student at Texas A&M University who is fascinated with learning and using technology
+                            to solve complex problems.
+                        </p>
+                    </section>
+                </div>
+                <div class="row">
+                    <section class="about-skills ">
+                        <h3 class="subheading-3">Skills</h3>
+                        <ul class="skill-list">
+                            <li>
+                                <img src="assets/python-logo.svg" alt="python-icon" class="skill-icon python-logo"> 
+                                <span>Python</span>
+                            </li>
+                            <li>
+                                <img src="assets/c++-logo.svg" alt="c++-icon" class="skill-icon c++-logo">
+                                <span>C++</span>
+                            </li>
+                            <li>
+                                <img src="assets/JavaScript-logo.png" alt="javascript-icon" class="skill-icon js-logo">
+                                <span>JavaScript</span>
+                            </li>
+                            <li>
+                                <img src="assets/html-logo.svg" alt="html-icon" class="skill-icon html-logo">
+                                <span>HTML</span>
+                            </li>
+                            <li>
+                                <img src="assets/css-logo.svg" alt="css-icon" class="skill-icon css-logo"> 
+                                <span>CSS</span>
+                            </li>
+                            <li>
+                                <img src="assets/aws-logo.svg" alt="aws-icon" class="skill-icon aws-logo">
+                                <span>AWS</span>
+                            </li>
+                        </ul>
+                    </section>
+                </div>
             </div>
-        </section>
+        </div>
     </section>
 
     <!--Experience Section-->
-    <section id="experience">
-        <h2>Experience</h2>
+    <section id="experience" class="container overflow-hidden">
+        <h2 class="subheading-2">Experience</h2>
+        <div class="row">
+            <div class="col">
+                
+            </div>
+
+        </div>
+        <div class="row">
+
+        </div>
+        <div class="row">
+
+        </div>
+
+
+
         <div class="experience-tiles">
             <!--Paycom Tile-->
             <div class="tile">
@@ -188,6 +212,7 @@
         </div>
     </section>
 
+
     <!--Projects Section-->
  <!---   <section id="projects" class=container>
         <h2>Projects</h2>
@@ -255,8 +280,7 @@
 
 
     <!--Popper.js, Bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
 </html>
