finished making experiences section responsive

--- a/src/index.html
+++ b/src/index.html
@@ -108,10 +108,10 @@
         <h2 class="subheading-2">Experience</h2>
         <!--Paycom Tile-->
         <div class="row align-items-center tile">
-            <div class="col-md-4 align-self-center">
-                <img src="assets/paycom-logo.png" alt="paycom career logo" class="img-fluid paycom-logo career-icon">
+            <div class="col-lg-4 align-self-center img-container">
+                <img src="assets/paycom-logo.jpg" alt="paycom career logo" class="img-fluid career-icon">
             </div>
-            <div class="col-md-8 align-self-center">
+            <div class="col-lg-8 align-self-center">
                 <div class="tile-text">
                     <div class="tile-heading">
                         <h3>Paycom</h3>
@@ -135,12 +135,13 @@
                 </div>
             </div>
         </div>
+
         <!--TAMU Tile-->
         <div class="row align-items-center tile">
-            <div class="col-md-4 align-self-center">
-                <img src="assets/math-logo.png" alt="TAMU logo" class="tamu-logo career-icon">
+            <div class="col-lg-4 align-self-center img-container">
+                <img src="assets/math-logo.png" alt="TAMU logo" class="img-fluid career-icon">
             </div>
-            <div class="col-md-8 align-self-center">
+            <div class="col-lg-8 align-self-center">
                 <div class="tile-text">
                     <div class="tile-heading">
                         <h3>TAMU Department of Mathematics</h3>
@@ -151,27 +152,28 @@
                         I am currently working alongisde my professor where I am responsible for performing unit tests, 
                         debugging, and maintaining documentations for various MATLAB simulations programs.
                     </p>
-                    <div class="experience-skills">
-                        <ul class="tamu-skills career-skills">
-                            <li class="python-icon">
-                                <img src="assets/python-logo.svg" alt="python icon" class="skill-icon">
-                                <span>Python</span>
-                            </li>
-                            <li class="matlab-icon">
-                                <img src="assets/matlab-logo.png" alt="matlab icon" class="skill-icon">
-                                <span>MatLab</span>
-                            </li>
-                        </ul>
-                    </div>
+                </div>
+                <div class="experience-skills">
+                    <ul class="tamu-skills career-skills">
+                        <li class="python-icon">
+                            <img src="assets/python-logo.svg" alt="python icon" class="skill-icon">
+                            <span>Python</span>
+                        </li>
+                        <li class="matlab-icon">
+                            <img src="assets/matlab-logo.png" alt="matlab icon" class="skill-icon">
+                            <span>MatLab</span>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
+
         <!--ACC Tile-->
-        <div class="row align-items-center tile">
-            <div class="col-md-4 align-self-center">
-                <img src="assets/acc-logo.png" alt="acc logo" class="acc-logo career-icon">
+        <div class="row align-items-center justify-items-center tile">
+            <div class="col-lg-4 align-self-center img-container">
+                <img src="assets/acc-logo.jpg" alt="acc logo" class="img-fluid career-icon">
             </div>
-            <div class="col-md-8 align-self-center">
+            <div class="col-lg-8 align-self-center">
                 <div class="tile-text">
                     <div class="tile-heading">
                         <h3>Aggie Coding Club</h3>
@@ -198,100 +200,7 @@
                 </div>
             </div>
         </div>
-
-<!------Old experience-->
-
-        <div class="experience-tiles">
-            <!--Paycom Tile-->
-            <div class="tile">
-                <img src="assets/paycom-logo.png" alt="paycom logo" class="paycom-logo career-icon">
-                <div class="tile-content">
-                    <div class="tile-text">
-                        <div class="tile-heading">
-                            <h3>Paycom</h3>
-                            <p>Summer Technology Engagement Program | </p>
-                            <p>July 2023 - Present</p>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia distinctio, sequi adipisci sed facere 
-                            voluptatum nam eaque repellendus nisi voluptatem velit quos incidunt. Magnam cumque ipsam aliquid nihil sapiente doloribus.
-                        </p>
-                    </div>
-                    <div class="experience-skills">
-                        <ul class="paycom-skills career-skills">
-                            <li class="python-icon">
-                                <img src="assets/python-logo.svg" alt="python-icon" class="skill-icon"> 
-                                <span>Python</span>
-                            </li>
-                            <li class="javascript-icon">
-                                <img src="assets/JavaScript-logo.png" alt="javascript-icon" class="skill-icon">
-                                <span>JavaScript</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <!--TAMU Tile-->
-            <div class="tile">
-                <img src="assets/math-logo.png" alt="TAMU logo" class="tamu-logo career-icon">
-                <div class="tile-content">
-                    <div class="tile-text">
-                        <div class="tile-heading">
-                            <h3>TAMU Department of Mathematics</h3>
-                            <p>Student Research Technician | </p>
-                            <p>January 2023 - Present</p>
-                        </div>
-                        <p>
-                            I am currently working alongisde my professor where I am responsible for performing unit tests, 
-                            debugging, and maintaining documentations for various MATLAB simulations programs.
-                        </p>
-                    </div>
-                    <div class="experience-skills">
-                        <ul class="tamu-skills career-skills">
-                            <li class="python-icon">
-                                <img src="assets/python-logo.svg" alt="python icon" class="skill-icon">
-                                <span>Python</span>
-                            </li>
-                            <li class="matlab-icon">
-                                <img src="assets/matlab-logo.png" alt="matlab icon" class="skill-icon">
-                                <span>MatLab</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <!--Aggie Coding Club tile-->
-            <div class="tile">
-                <img src="assets/acc-logo.png" alt="acc logo" class="acc-logo career-icon">
-                <div class="tile-content">
-                    <div class="tile-text">
-                        <div class="tile-heading">
-                            <h3>Aggie Coding Club</h3>
-                            <p>Events and Marketing Officer | </p>
-                            <p>September 2023 - Present</p>
-                        </div>
-                        <p>
-                            Recently elected as an Events and Marketing Officer where I am responsible for managing the club's social media 
-                            presence, planning events, and driving member engagement. Additionally, as a member, I have attended various workshops learning new 
-                            technologies and services.
-                        </p>
-                    </div>
-                    <div class="experience-skills">
-                        <ul class="acc-skills career-skills">
-                            <li class="js-icon">
-                                <img src="assets/JavaScript-logo.png" alt="javascript icon" class="skill-icon">
-                                <span>JavaScript</span>
-                            </li>
-                            <li class="python-icon">
-                                <img src="assets/python-logo.svg" alt="python icon" class="skill-icon">
-                                <span>Python</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
     </section>
-
 
     <!--Projects Section-->
  <!---   <section id="projects" class=container>
