--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse list-container" id="navbarNav">
-                <ul class="navbar-nav nav-list">
+                <ul class="navbar-nav nav-list ms-auto text-center">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#about">// About Me</a>
                     </li>
